# annofab-api-python-client

./: .flake8  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  HISTORY.md  LICENSE  Makefile  Pipfile  README.md  README_for_developer.md  api.py  conf.py  pylintrc  pyproject.toml  pytest.ini  requirements-doc.txt  setup.cfg  setup.py  tox.ini
.codex/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codacy.yml  codeql-analysis.yml  codeql.yml  lint-test.yml  publish-to-pypi.yml
annofabapi/: __init__.py  __version__.py  _utils.py  api.py  api2.py  credentials.py  enums.py  exceptions.py  generated_api.py  generated_api2.py  mixin.py  models.py  parser.py  plugin.py  project_member_repository.py  resource.py  segmentation.py  typing.py  utils.py  wrapper.py
annofabapi/dataclass/: account.py  afanno.py  annotation-specs.py  annotation.py  annotation_specs.py  comment.py  input.py  inspection.py  instruction.py  job.py  models.py  my.py  organization.py  organization_member.py  parse-annotation.py  project.py  project_member.py  statistics.py  supplementary.py  task.py  webhook.py
annofabapi/pydantic_models/: accept_organization_invitation_request.py  account.py  account_worktime_statistics.py  action_required.py  additional_data_default_type.py  additional_data_definition_type.py  additional_data_definition_v1.py  additional_data_definition_v1_choices_inner.py  additional_data_definition_v2.py  additional_data_restriction.py  additional_data_restriction_condition.py  additional_data_restriction_condition_can_input.py  additional_data_restriction_condition_equals.py  additional_data_restriction_condition_has_label.py  additional_data_restriction_condition_imply.py  additional_data_restriction_condition_matches.py  additional_data_restriction_condition_not_equals.py  additional_data_restriction_condition_not_matches.py  additional_data_v1.py  additional_data_v2.py  additional_data_value.py  additional_data_value_choice.py  additional_data_value_comment.py  additional_data_value_flag.py  additional_data_value_integer.py  additional_data_value_link.py  additional_data_value_select.py  additional_data_value_text.py  additional_data_value_tracking.py  aggregation_result.py  all_oidc_endpoints.py  annotation_data_holding_type.py  annotation_data_v1.py  annotation_detail_content_input.py  annotation_detail_content_input_inner.py  annotation_detail_content_input_outer.py  annotation_detail_content_output.py  annotation_detail_content_output_inner.py  annotation_detail_content_output_inner_unknown.py  annotation_detail_content_output_outer.py  (+382 more)
annofabapi/util/: annotation_specs.py  attribute_restrictions.py  page.py  task_history.py  type_util.py
annofabapi/utils/: annotation_specs.py
docs/: annofabapi.rst  api_reference.rst  conf.py  create_pydantic_modes_rst.sh  dataclass.rst  exceptions.rst  faq.rst  index.rst  models.rst  modules.rst  parser.rst  requirements.txt  resource.rst  utils.rst  wrapper.rst
docs/_templates/: links.html
docs/api_reference/: api.rst  api2.rst  credentials.rst  dataclass.rst  index.rst  plugin.rst  project_member_repository.rst  pydantic_models.rst  resource.rst  segmentation.rst  util.rst
docs/source/: annofabapi.rst  conf.py  index.rst  modules.rst
docs/user_guide/: advanced_usage.rst  annofabapi_class.rst  basic_usage.rst  for_developer.rst  index.rst  parser.rst  wrapper_class.rst
examples/: Pipfile  README.md  cancel_acceptance.py  create_raster_annotation.py  deprecated_register_annotation_from_full_zip.py  diff_annotation_specs.py  example_typing.py  example_utils.py  examples.py  invite_user_to_projects.py  logging.yaml  register_raster_annotation_from_polygon.py  reject_tasks_with_adding_comment.py  setup.py  write_semantic_segmentation_images.py
examples/annofabcli/: __init__.py  __main__.py  cancel_acceptance.py  complete_tasks.py  deprecated_complete_tasks.py  deprecated_register_annotation_from_full_zip.py  deprecated_register_raster_annotation_from_polygon.py  diff_annotation_specs.py  diff_project_members.py  diff_projects.py  invite_user_to_projects.py  invite_users.py  print_label_color.py  print_unprocessed_inspections.py  reject_tasks.py  reject_tasks_with_adding_comment.py  write_annotation_image.py  write_semantic_segmentation_images.py
generate/: .openapi-generator-ignore_v1  .openapi-generator-ignore_v2  README.md  README_for_generate.md  api_template.py  dataclass_models_partial_header.py  debug-operation.json  enums_partial_header_v1.py  generate.sh  generated_api_partial_header_v1.py  generated_api_partial_header_v2.py  generated_api_template.py  generated_api_template_v1.py  generated_api_template_v2.py  models_partial_header_v1.py  swagger-api-components.yaml  swagger.v2.yaml  swagger.yaml
generate/partial-footer/: models_partial_footer.py
generate/partial-header/: generated_api_partial_header_v1.py  generated_api_partial_header_v2.py  models_partial_header_v1.py
generate/swagger/: swagger-api-components.yaml  swagger-models.yaml  swagger-partial-header.yaml  swagger.v2.yaml  swagger.yaml
generate/template/: api.mustache  model.mustache
generate/template_dataclass/: model.mustache
tests/: _test_dataclass_file.py  conftest.py  create_test_project.py  test_api.py  test_api2.py  test_build.py  test_dataclass.py  test_dataclass_webapi.py  test_local_api.py  test_local_dataclass.py  test_local_models.py  test_local_parser.py  test_local_resource.py  test_local_utils.py  test_local_wrapper.py  test_parser.py  test_project_member_repository.py  test_pydantic_models.py  test_resource.py  test_sandbox.py  test_segmentation.py  test_utils.py  test_wrapper.py  tests_local_api.py  utils_for_test.py
tests/data/: annotation-specs.json  full-annotation.json  organization-activity.json  organization.json  project-member.json  simple-annotation.json  supplementary-data.json
tests/util/: test_annotation_specs.py  test_attribute_restrictions.py  (+4 more)
(+80 files in other folders)
